PrismParser.java
// Generated from Prism.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrismParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, A=2, ARRAY=3, BOOL=4, CLOCK=5, CONST=6, CTMC=7, C=8, DOUBLE=9, 
		DTMC=10, E=11, ENDINIT=12, ENDINVARIANT=13, ENDMODULE=14, ENDREWARDS=15, 
		ENDSYSTEM=16, FALSE=17, FORMULA=18, FILTER=19, FUNC=20, F=21, GLOBAL=22, 
		G=23, INIT=24, INVARIANT=25, I=26, INT=27, LABEL=28, MAX=29, MDP=30, MIN=31, 
		MODULE=32, X=33, NONDETERMINISTIC=34, OF=35, PMAX=36, PMIN=37, P=38, PROBABILISTIC=39, 
		PROB=40, PTA=41, RATE=42, REWARDS=43, RMAX=44, RMIN=45, R=46, S=47, STOCHASTIC=48, 
		SYSTEM=49, TRUE=50, U=51, W=52, NOT=53, AND=54, OR=55, IMPLIES=56, IFF=57, 
		RARROW=58, COLON=59, SEMICOLON=60, COMMA=61, DOTS=62, LPARENTH=63, RPARENTH=64, 
		LBRACKET=65, RBRACKET=66, DLBRACKET=67, DRBRACKET=68, LBRACE=69, RBRACE=70, 
		EQ=71, NE=72, LT=73, GT=74, DLT=75, DGT=76, LE=77, GE=78, PLUS=79, MINUS=80, 
		TIMES=81, DIVIDE=82, PRIME=83, RENAME=84, QMARK=85, DQUOTE=86, REG_INT=87, 
		REG_DOUBLE=88, REG_IDENTPRIME=89, REG_IDENT=90, PREPROC=91, COMMENT=92;
	public static final int
		RULE_prismfile = 0, RULE_statements = 1, RULE_statement = 2, RULE_filetype = 3, 
		RULE_term = 4, RULE_const_statement = 5, RULE_const_type = 6, RULE_condition_op = 7, 
		RULE_term_op = 8, RULE_formula_statement = 9, RULE_condition = 10, RULE_atomic_condition = 11, 
		RULE_value = 12, RULE_range = 13, RULE_condition_expand = 14, RULE_module = 15, 
		RULE_entries = 16, RULE_entrie = 17, RULE_attribute = 18, RULE_transition = 19, 
		RULE_transition_rules = 20, RULE_transition_assign = 21, RULE_global = 22;
	public static final String[] ruleNames = {
		"prismfile", "statements", "statement", "filetype", "term", "const_statement", 
		"const_type", "condition_op", "term_op", "formula_statement", "condition", 
		"atomic_condition", "value", "range", "condition_expand", "module", "entries", 
		"entrie", "attribute", "transition", "transition_rules", "transition_assign", 
		"global"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'A'", "'array'", "'bool'", "'clock'", "'const'", "'ctmc'", 
		"'C'", "'double'", "'dtmc'", "'E'", "'endinit'", "'endinvariant'", "'endmodule'", 
		"'endrewards'", "'endsystem'", "'false'", "'formula'", "'filter'", "'func'", 
		"'F'", "'global'", "'G'", "'init'", "'invariant'", "'I'", "'int'", "'label'", 
		"'max'", "'mdp'", "'min'", "'module'", "'X'", "'nondeterministic'", "'of'", 
		"'Pmax'", "'Pmin'", "'P'", "'probabilistic'", "'prob'", "'pta'", "'rate'", 
		"'rewards'", "'Rmax'", "'Rmin'", "'R'", "'S'", "'stochastic'", "'system'", 
		"'true'", "'U'", "'W'", "'!'", "'&'", "'|'", "'=>'", "'<=>'", "'->'", 
		"':'", "';'", "','", "'..'", "'('", "')'", "'['", "']'", "'[['", "']]'", 
		"'{'", "'}'", "'='", "'!='", "'<'", "'>'", "'<<'", "'>>'", "'<='", "'>='", 
		"'+'", "'-'", "'*'", "'/'", "'''", "'<-'", "'?'", "'\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WHITESPACE", "A", "ARRAY", "BOOL", "CLOCK", "CONST", "CTMC", "C", 
		"DOUBLE", "DTMC", "E", "ENDINIT", "ENDINVARIANT", "ENDMODULE", "ENDREWARDS", 
		"ENDSYSTEM", "FALSE", "FORMULA", "FILTER", "FUNC", "F", "GLOBAL", "G", 
		"INIT", "INVARIANT", "I", "INT", "LABEL", "MAX", "MDP", "MIN", "MODULE", 
		"X", "NONDETERMINISTIC", "OF", "PMAX", "PMIN", "P", "PROBABILISTIC", "PROB", 
		"PTA", "RATE", "REWARDS", "RMAX", "RMIN", "R", "S", "STOCHASTIC", "SYSTEM", 
		"TRUE", "U", "W", "NOT", "AND", "OR", "IMPLIES", "IFF", "RARROW", "COLON", 
		"SEMICOLON", "COMMA", "DOTS", "LPARENTH", "RPARENTH", "LBRACKET", "RBRACKET", 
		"DLBRACKET", "DRBRACKET", "LBRACE", "RBRACE", "EQ", "NE", "LT", "GT", 
		"DLT", "DGT", "LE", "GE", "PLUS", "MINUS", "TIMES", "DIVIDE", "PRIME", 
		"RENAME", "QMARK", "DQUOTE", "REG_INT", "REG_DOUBLE", "REG_IDENTPRIME", 
		"REG_IDENT", "PREPROC", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Prism.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrismParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PrismfileContext extends ParserRuleContext {
		public FiletypeContext filetype() {
			return getRuleContext(FiletypeContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public PrismfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prismfile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).enterPrismfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).exitPrismfile(this);
		}
	}

	public final PrismfileContext prismfile() throws RecognitionException {
		PrismfileContext _localctx = new PrismfileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prismfile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			filetype();
			setState(47);
			statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(49);
				statement();
				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << FORMULA) | (1L << GLOBAL) | (1L << MODULE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Const_statementContext const_statement() {
			return getRuleContext(Const_statementContext.class,0);
		}
		public Formula_statementContext formula_statement() {
			return getRuleContext(Formula_statementContext.class,0);
		}
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public GlobalContext global() {
			return getRuleContext(GlobalContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONST:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				const_statement();
				}
				break;
			case FORMULA:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				formula_statement();
				}
				break;
			case MODULE:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				module();
				}
				break;
			case GLOBAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(57);
				global();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FiletypeContext extends ParserRuleContext {
		public TerminalNode DTMC() { return getToken(PrismParser.DTMC, 0); }
		public TerminalNode CTMC() { return getToken(PrismParser.CTMC, 0); }
		public TerminalNode MDP() { return getToken(PrismParser.MDP, 0); }
		public TerminalNode PTA() { return getToken(PrismParser.PTA, 0); }
		public FiletypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filetype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).enterFiletype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).exitFiletype(this);
		}
	}

	public final FiletypeContext filetype() throws RecognitionException {
		FiletypeContext _localctx = new FiletypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_filetype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CTMC) | (1L << DTMC) | (1L << MDP) | (1L << PTA))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public Term_opContext term_op() {
			return getRuleContext(Term_opContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_term);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				value();
				setState(63);
				term_op();
				setState(64);
				value();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				value();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_statementContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(PrismParser.CONST, 0); }
		public TerminalNode REG_IDENT() { return getToken(PrismParser.REG_IDENT, 0); }
		public TerminalNode SEMICOLON() { return getToken(PrismParser.SEMICOLON, 0); }
		public Const_typeContext const_type() {
			return getRuleContext(Const_typeContext.class,0);
		}
		public TerminalNode INT() { return getToken(PrismParser.INT, 0); }
		public TerminalNode EQ() { return getToken(PrismParser.EQ, 0); }
		public TerminalNode REG_INT() { return getToken(PrismParser.REG_INT, 0); }
		public TerminalNode DOUBLE() { return getToken(PrismParser.DOUBLE, 0); }
		public TerminalNode REG_DOUBLE() { return getToken(PrismParser.REG_DOUBLE, 0); }
		public Const_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).enterConst_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).exitConst_statement(this);
		}
	}

	public final Const_statementContext const_statement() throws RecognitionException {
		Const_statementContext _localctx = new Const_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_const_statement);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				match(CONST);
				setState(70);
				match(REG_IDENT);
				setState(71);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(CONST);
				setState(73);
				const_type();
				setState(74);
				match(REG_IDENT);
				setState(75);
				match(SEMICOLON);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				match(CONST);
				setState(78);
				match(INT);
				setState(79);
				match(REG_IDENT);
				setState(80);
				match(EQ);
				setState(81);
				match(REG_INT);
				setState(82);
				match(SEMICOLON);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				match(CONST);
				setState(84);
				match(DOUBLE);
				setState(85);
				match(REG_IDENT);
				setState(86);
				match(EQ);
				setState(87);
				match(REG_DOUBLE);
				setState(88);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_typeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(PrismParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(PrismParser.DOUBLE, 0); }
		public Const_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).enterConst_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).exitConst_type(this);
		}
	}

	public final Const_typeContext const_type() throws RecognitionException {
		Const_typeContext _localctx = new Const_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_const_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_la = _input.LA(1);
			if ( !(_la==DOUBLE || _la==INT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condition_opContext extends ParserRuleContext {
		public TerminalNode GE() { return getToken(PrismParser.GE, 0); }
		public TerminalNode EQ() { return getToken(PrismParser.EQ, 0); }
		public TerminalNode NE() { return getToken(PrismParser.NE, 0); }
		public TerminalNode LE() { return getToken(PrismParser.LE, 0); }
		public TerminalNode AND() { return getToken(PrismParser.AND, 0); }
		public TerminalNode OR() { return getToken(PrismParser.OR, 0); }
		public TerminalNode LT() { return getToken(PrismParser.LT, 0); }
		public TerminalNode GT() { return getToken(PrismParser.GT, 0); }
		public Condition_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).enterCondition_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).exitCondition_op(this);
		}
	}

	public final Condition_opContext condition_op() throws RecognitionException {
		Condition_opContext _localctx = new Condition_opContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_condition_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !(((((_la - 54)) & ~0x3f) == 0 && ((1L << (_la - 54)) & ((1L << (AND - 54)) | (1L << (OR - 54)) | (1L << (EQ - 54)) | (1L << (NE - 54)) | (1L << (LT - 54)) | (1L << (GT - 54)) | (1L << (LE - 54)) | (1L << (GE - 54)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Term_opContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(PrismParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(PrismParser.MINUS, 0); }
		public TerminalNode TIMES() { return getToken(PrismParser.TIMES, 0); }
		public TerminalNode DIVIDE() { return getToken(PrismParser.DIVIDE, 0); }
		public Term_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).enterTerm_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).exitTerm_op(this);
		}
	}

	public final Term_opContext term_op() throws RecognitionException {
		Term_opContext _localctx = new Term_opContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_term_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !(((((_la - 79)) & ~0x3f) == 0 && ((1L << (_la - 79)) & ((1L << (PLUS - 79)) | (1L << (MINUS - 79)) | (1L << (TIMES - 79)) | (1L << (DIVIDE - 79)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Formula_statementContext extends ParserRuleContext {
		public TerminalNode FORMULA() { return getToken(PrismParser.FORMULA, 0); }
		public TerminalNode REG_IDENT() { return getToken(PrismParser.REG_IDENT, 0); }
		public TerminalNode EQ() { return getToken(PrismParser.EQ, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PrismParser.SEMICOLON, 0); }
		public Formula_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).enterFormula_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).exitFormula_statement(this);
		}
	}

	public final Formula_statementContext formula_statement() throws RecognitionException {
		Formula_statementContext _localctx = new Formula_statementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_formula_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(FORMULA);
			setState(98);
			match(REG_IDENT);
			setState(99);
			match(EQ);
			setState(100);
			condition();
			setState(101);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public Atomic_conditionContext atomic_condition() {
			return getRuleContext(Atomic_conditionContext.class,0);
		}
		public TerminalNode NOT() { return getToken(PrismParser.NOT, 0); }
		public List<Condition_expandContext> condition_expand() {
			return getRuleContexts(Condition_expandContext.class);
		}
		public Condition_expandContext condition_expand(int i) {
			return getRuleContext(Condition_expandContext.class,i);
		}
		public TerminalNode LPARENTH() { return getToken(PrismParser.LPARENTH, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RPARENTH() { return getToken(PrismParser.RPARENTH, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrismListener ) ((PrismListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condition);
		int _la;
		try {
			int _alt;
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(103);
					match(NOT);
					}
				}

				setState(106);
				atomic_condition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(107);
					match(NOT);
					}
				}

				setState(110);
				atomic_condition();
				setState(114);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(111);
						condition_expand();
						}
						} 
					}
					setState(116);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(117);
					match(NOT);
					}
				}

				setState(120);
				match(LPARENTH);
				setState(121);
				condition();
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 54)) & ~0x3f) == 0 && ((1L << (_la - 54)) & ((1L << (AND - 54)) | (1L << (OR - 54)) | (1L << (EQ - 54)) | (1L << (NE - 54)) | (1L << (LT - 54)) | (1L << (GT - 54)) | (1L << (LE - 54)) | (1L << (GE - 54)))) != 0)) {
					{
					{
					setState(122);
					condition_expand();
					}
					}
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(128);
				match(RPARENTH);
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(129);
						condition_expand();
						}
						} 
					}
					setState(134);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
